# bpy-binaries

./: .gitignore  COPYING  README.md  manage.py  pre-commit-config.yaml  pyproject.toml  tox.ini
scripts/: __init__.py  manage.py
scripts/templates/: setup.jinja2-py
tests/: test_blender.py
