[tool.poetry]
name = "bpy-binaries"
version = "1.0.0"
description = "Automatically build Blender-as-Python-module (bpy) binaries."
authors = ["Krzysztof Wisniewski <argmaster.world@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "bpy" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
dulwich = "^0.21.5"
click = "^8.1.3"
poethepoet = "^0.20.0"
mypy = "^1.4.0"
typing-extensions = "^4.6.3"
pre-commit = "^3.3.3"
tomlkit = "^0.11.8"
jinja2 = "^3.1.2"
tzlocal = "^5.0.1"
docformatter = "^1.7.3"
types-tzlocal = "^5.0.1.0"

[tool.poetry.scripts]
manage = 'scripts.manage:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["S603"]
target-version = "py310"
